--- a/.github/workflows/check-stock.yml
+++ b/.github/workflows/check-stock.yml
@@ -9,17 +9,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
-      - name: Build Docker image
-        run: docker build -t amul-bot .
-      - name: Run bot
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Pull and run the prebuilt image
         run: docker run --rm \
           -e PINCODE=${{ secrets.PINCODE }} \
           -e TWILIO_SID=${{ secrets.TWILIO_SID }} \
           -e TWILIO_AUTH=${{ secrets.TWILIO_AUTH }} \
           -e TWILIO_FROM=${{ secrets.TWILIO_FROM }} \
           -e TWILIO_TO=${{ secrets.TWILIO_TO }} \
-          amul-bot
+          ghcr.io/nom/amul-bot:latest
+
 
