--- a/.github/workflows/check-stock.yml
+++ b/.github/workflows/check-stock.yml
@@ -17,7 +17,8 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Pull and run the prebuilt image
-        run: docker run --rm \
+        run: | 
+          docker run --rm \
           -e PINCODE=${{ secrets.PINCODE }} \
           -e TWILIO_SID=${{ secrets.TWILIO_SID }} \
           -e TWILIO_AUTH=${{ secrets.TWILIO_AUTH }} \
