--- a/.github/workflows/check-stock.yml
+++ b/.github/workflows/check-stock.yml
@@ -1,29 +1,51 @@
-name: Check Stock
+name: Run Pre-Built Docker Image with Cache
 
 on:
   schedule:
-    - cron: "*/30 * * * *"
-  workflow_dispatch:
+    - cron: "*/30 * * * *" # every 30 minutes
 
 jobs:
-  build:
+  run-container:
     runs-on: ubuntu-latest
     steps:
-      - name: Log in to GitHub Container Registry
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Pull and run the prebuilt image
-        run: | 
+      - name: Load cached image if present
+        uses: actions/cache@v3
+        with:
+          path: /tmp/docker-cache
+          key: docker-${{ runner.os }}-${{ github.sha }}
+          restore-keys: |
+            docker-${{ runner.os }}-
+
+      - name: Pull image (or use cached)
+        run: |
+          mkdir -p /tmp/docker-cache
+          if [ -f /tmp/docker-cache/amul-bot.tar ]; then
+            echo "Loading cached Docker image..."
+            docker load -i /tmp/docker-cache/amul-bot.tar
+          else
+            echo "Pulling image and caching..."
+            docker pull ghcr.io/hiki-uwu/amul-bot:latest
+            docker save ghcr.io/hiki-uwu/amul-bot:latest -o /tmp/docker-cache/amul-bot.tar
+          fi
+
+      - name: Run container
+        run: |
           docker run --rm \
-          -e PINCODE=${{ secrets.PINCODE }} \
-          -e TWILIO_SID=${{ secrets.TWILIO_SID }} \
-          -e TWILIO_AUTH=${{ secrets.TWILIO_AUTH }} \
-          -e TWILIO_FROM=${{ secrets.TWILIO_FROM }} \
-          -e TWILIO_TO=${{ secrets.TWILIO_TO }} \
-          ghcr.io/hiki-uwu/amul-bot:latest
+            -e PINCODE=${{ secrets.PINCODE }} \
+            -e TWILIO_SID=${{ secrets.TWILIO_SID }} \
+            -e TWILIO_AUTH=${{ secrets.TWILIO_AUTH }} \
+            -e TWILIO_FROM=${{ secrets.TWILIO_FROM }} \
+            -e TWILIO_TO=${{ secrets.TWILIO_TO }} \
+            ghcr.io/hiki-uwu/amul-bot:latest
 
 
